--- a/views/upload.pug
+++ b/views/upload.pug
@@ -1,9 +1,9 @@
 extends layouts/main
 block content
     .form-container
-        form(action=`/videos${routes.upload}`, method="post")
+        form(action=`/videos${routes.upload}`, method="post", enctype="multipart/form-data")
             label(for="file") Video File
-            input(type="file", name="file", id="file")
-            input(type="text", name="title", placeholder="Title")
-            textarea(type="description", placeholder="Description")
+            input(type="file", name="videoFile", id="file" ,required=true, accept="video/*")
+            input(type="text", name="title", placeholder="Title" ,required=true)
+            textarea(type="description", placeholder="Description" ,required=true)
             input(type="submit", value="Upload Video")
