--- a/views/join.pug
+++ b/views/join.pug
@@ -2,9 +2,9 @@ extends layouts/main
 block content
     .form-container
         form(action=routes.join, method="post")
-            input(type="email", name="email", placeholder="Email")
-            input(type="name", name="name", placeholder="Full Name")
-            input(type="password", name="password", placeholder="password")
-            input(type="password2", name="password2", placeholder="Verify password")
+            input(type="email", name="email", placeholder="Email", required=true;)
+            input(type="name", name="name", placeholder="Full Name", required=true;)
+            input(type="password", name="password", placeholder="password", required=true;)
+            input(type="password2", name="password2", placeholder="Verify password", required=true;)
             input(type="submit", value="Join Now")
         include partials/socialLogin
